<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/scrollable_group"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/nav_medal_grid"
            android:title="@string/title_medal_grid"/>

        <item
            android:id="@+id/nav_product_list"
            android:title="@string/title_product_list"/>

        <item
            android:id="@+id/nav_yokai_grid"
            android:title="@string/title_yokai_grid"/>

    </group>

    <group android:id="@+id/fixed_group"
        android:checkableBehavior="single"
        android:orderInCategory="3">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_activity_preferences"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/title_activity_about"/>
    </group>
</menu>
